--- a/package.json
+++ b/package.json
@@ -21,22 +21,31 @@
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
     "@chilkat/ck-node11-win64": "^9.50.80",
+    "adm-zip": "^0.4.13",
     "aws-sdk": "^2.592.0",
+    "axios": "^0.19.0",
     "casual": "^1.6.2",
     "cls-bluebird": "^2.1.0",
     "core-js": "^3.1.4",
+    "cors": "^2.8.5",
     "cx": "^19.12.1",
     "cx-react": "^17.10.0",
     "cx-theme-material": "^18.7.0",
     "express": "^4.17.1",
+    "file-saver": "^2.0.2",
+    "jszip": "^3.2.2",
+    "jszip-utils": "^0.1.0",
     "moment": "^2.24.0",
+    "moment-range": "^4.0.2",
+    "node-fetch": "^2.6.0",
     "onedrive-api": "^0.3.3",
     "react": "^16.12.0",
     "react-cx": "^0.1.12",
     "react-dom": "^16.12.0",
     "regenerator-runtime": "^0.13.2",
     "type": "^2.0.0",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "zip-lib": "^0.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
